fix: Dark mode for the 404 error page

--- a/web-application/client/components/errors/Error404.css
+++ b/web-application/client/components/errors/Error404.css
@@ -1,8 +1,9 @@
 .error-404__error {
     padding: 20px;
-    border: thin solid var(--main-border-color);
+    border: thin solid var(--card-border-color);
+    background-color: var(--card-background-color);
+    color: var(--main-text-color);
     border-radius: 10px;
-    background-color: white;
     max-width: 600px;
     margin: 0 auto;
     font-size: 16px;
